<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sessions</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_user">User Name:</string>
    <string name="login_password">Password:</string>
    <string name="login_login_btn">Login</string>
    <string name="login_register_btn"><u>Register New User</u></string>
    <string name="register_register_btn">Register</string>
    <string name="cancel_btn"><u>Return to log in page</u></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_create_user">Register User!</string>
    <string name="register_user_success">User successfully created!</string>
    <string name="new_session">Start New Session</string>
    <string name="list_of_sessions">Past Sessions</string>
    <string name="title_activity_new_session">NewSessionActivity</string>
    <string name="title_activity_sessions_recorded">SessionsRecordedActivity</string>
    <string name="title_activity_session_in_progress">SessionInProgressActivity</string>
    <string name="previous_btn">Previous</string>
    <string name="next_btn">Next</string>
    <string name="err_please_make_selection">Please make a selection</string>
    <string name="err_please_enter_data">Username and password required</string>
    <string name="complete_btn">Complete the Session!</string>
    <string name="title_activity_session_detail_list">SessionDetailListActivity</string>
    <string name="past_sessions">View past sessions</string>
    <string name="success_session">Session taken successfully!</string>

</resources>
