<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <LinearLayout
        android:id="@+id/userRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/login_user"
            android:layout_weight="0.3"
            android:gravity="center_vertical"/>

        <EditText
            android:id="@+id/userName_txt"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:text="a" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:weightSum="1"
        android:layout_below="@+id/userRow" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/login_password"
            android:layout_weight="0.3"
            android:gravity="center_vertical" />

        <EditText
            android:id="@+id/password_txt"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.60"
            android:text="b" />

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_login_btn"
        android:layout_below="@+id/passRow"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_register_btn"
        android:layout_below="@+id/login_btn" />

    <TextView
        android:id="@+id/register_success_lbl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/register_user_success"
        android:layout_below="@+id/register_btn"/>


</RelativeLayout>