<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/userName_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingTop="25px"/>

    <EditText
        android:id="@+id/password_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/userName_txt" />

    <TextView
        android:id="@+id/err_lbl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/error"
        android:text="@string/err_please_enter_data"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_below="@+id/password_txt"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register_register_btn"
        android:layout_below="@+id/err_lbl"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@color/white"
        android:layout_below="@+id/register_btn"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/newperson"
        android:layout_below="@+id/cancel_btn" />

</RelativeLayout>